2001-03-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* tests/purify/purify.fvwm2rc:
	merged ImagePath and SetEnv tests and enhanced SetEnv tests

	* fvwm/move_resize.c (MoveOutline):
	revised outline drawing code for small windows and simplified code

2001-03-10  Dan Espen  <dane@mk.telcordia.com>

	* tests/FvwmButtons/FvwmButtons.sh: More tests.
	* tests/purify/purify.fvwm2rc: Add xbm bitmap as a side pic,
 	default icon.

2001-03-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleReparentNotify):
	* fvwm/add_window.c (setup_frame_window):
	* fvwm/add_window.h:
	discard events after window was reparented

	* fvwm/stack.c (mark_transient_subtree):
	fixed core dump

	* libs/ColorUtils.c (GetShadowOrHiliteColor):
	attempt to 'fix' UMR

	* fvwm/colors.c (FreeColors):
	* fvwm/builtins.c (SetDefaultColors):
	* fvwm/module_interface.c (send_list_func):
	* fvwm/events.c (HandleFocusIn):
	* fvwm/cursor.c (CursorStyle):
	* fvwm/menus.c (NewMenuStyle):
	(UpdateMenuStyle):
	* fvwm/fvwm.c (InitVariables):
	(CreateGCs):
	(InitVariables):
	* libs/defaults.h (DEFAULT_BACK_COLOR):
	Define some default colours in defaults.h and use them everywhere.

	* libs/Colorset.c (AllocColorset):
	hardware portability patch; don't assume layout of the colorset_struct
	type

	* libs/envvar.c (getEnv):
	initialise a temporary variable

	* fvwm/builtins.c (add_to_env_list):
	fixed SetEnv memory leak

	* fvwm/session.c (saveQuitSession):
	removed c++ comment

	* libs/envvar.c (strIns):
	commented debug code
	(envDupExpand):
	removed debug code

	* fvwm/add_window.c (free_window_names):
	fixed memory leak

	* libs/Picture.c (LoadPicture):
	fixed core dump with xmb files

	* fvwm/menus.c (MenuInteraction):
	fixed core dump

2001-03-10  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2.1:
	documented xsm DiscardCommand workaround using $SESSION_MANAGER_NAME

	* fvwm/windowlist.c:
	safety fix, this fixes core dump in WindowList under xsm

2001-03-07  Dominik Vogt  <dominik.vogt@gmx.de>
