@@ -1,5 +1,10 @@
 2001-03-10  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* tests/FvwmButtons/FvwmButtons.sh:
+	Make sure some styles are set properly for FvwmButtons
+	new options -S and -k
+	simplified a bit
+
 	* tests/purify/purify.fvwm2rc:
 	merged ImagePath and SetEnv tests and enhanced SetEnv tests
 
